--- a/less/home-page.less
+++ b/less/home-page.less
@@ -88,7 +88,7 @@
         margin-bottom: 26px;
       }
 
-      .btn {
+      button {
         .button-creator(100px, 40px, @btn-bg-color, @porcelain, 1.8rem);
         @media @mobile {
           .button-creator(100px, 60px, @btn-bg-color, @porcelain, 1.8rem);
