--- a/less/navigation.less
+++ b/less/navigation.less
@@ -41,6 +41,10 @@
         font-size: 1.8rem;
         text-decoration: none;
         color: @nav-font;
+        &:hover {
+          text-decoration: underline;
+          transform: translateY(4px);
+        }
       }
     }
   }
